--- a/.storybook/.preview-head.html
+++ b/.storybook/.preview-head.html
@@ -1,1 +1,4 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,800,900">
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,800,900"
+/>
